# NewsPhere

./: README.md
android-app/: README.md  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/gradle/wrapper/: gradle-wrapper.properties
client-react/: package-lock.json  package.json
client-react/src/: index.js  טיוטה.js
filter-service/: CMakeLists.txt  Dockerfile  README.md  operations.txt
filter-service/src/: Data.cpp  HashFunction.cpp  ICommand.cpp  InputValidator.cpp  Main.cpp  UrlAddCommand.cpp  UrlCheckCommand.cpp  bloomFilter.cpp  bloomFilterArray.cpp  bloomFilterInit.cpp  commandInit.cpp  runner.cpp
filter-service/src/Headers/: Data.h  HashFunction.h  ICommand.h  InputValidator.h  UrlAddCommand.h  UrlCheckCommand.h  bloomFilter.h  bloomFilterArray.h  bloomFilterInit.h  commandInit.h  runner.h
filter-service/tests/: array_test.cpp  bloomFilterInit_test.cpp  bloomfilter_test.cpp  commandInit_test.cpp  hash_test.cpp  test_main.cpp
filter-service/tests/h.files/: bloomfilter_test.h  hash_test.h
web-service/: README.md  app.js  foobar.users.base64.json  howToAddNode_modules.txt  package-lock.json  package.json
web-service/config/: .env  .env.test
web-service/controllers/: post.js  user.js
web-service/middleware/: authmiddleware.js
web-service/models/: post.js  user.js
web-service/public1/: index.html  index.js  index_.html  index_user.html
web-service/routes/: post.js  token.js  user.js
web-service/services/: post.js  user.js
web-service/wiki/: android_application.md  react.md  settingUpWorkSpace.md
(+106 files in other folders)
